--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,14 @@ jobs:
           - "2.2"
           - "3.0"
           - "3.1"
-
+          - "3.2"
+          - "4.0"
+        exclude:
+          # django 4.0 supports python >= 3.8
+          - python-version: "3.6"
+            django-version: "4.0"
+          - python-version: "3.7"
+            django-version: "4.0"
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
