--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,22 +27,20 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - "3.6"
-          - "3.7"
           - "3.8"
           - "3.9"
+          - "3.10"
+          - "3.11"
+          - "3.12"
         django-version:
-          - "2.2"
-          - "3.0"
-          - "3.1"
-          - "3.2"
-          - "4.0"
+          - "4.2"
+          - "5.0"
         exclude:
-          # django 4.0 supports python >= 3.8
-          - python-version: "3.6"
-            django-version: "4.0"
-          - python-version: "3.7"
-            django-version: "4.0"
+          # Django 5 supports Python 3.10 upwwards only
+          - python-version: "3.8"
+            django-version: "5.0"
+          - python-version: "3.9"
+            django-version: "5.0"
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
