Tweak GHA settings to make tox-gh-actions work

--- a/tox.ini
+++ b/tox.ini
@@ -10,23 +10,46 @@ envlist =
 [testenv]
 passenv = DJANGO_DB_HOST
 basepython =
-    py3.8: python3
-    py3.9: python3
-    py3.10: python3
-    py3.11: python3
-    py3.12: python3
+    py3.8: python3.8
+    py3.9: python3.9
+    py3.10: python3.10
+    py3.11: python3.11
+    py3.12: python3.12
     pypy: pypy
+    pypy3: pypy3
+
 usedevelop = true
 setenv =
     PYTHONPATH = {toxinidir}
     DJANGO_SETTINGS_MODULE=tests.test_settings
 deps =
 	py{3.8,3.9,3.10,3.11,3.12,pypy}: coverage
-    psycopg2 :psycopg2-binary
-    psycopg3 :psycopg-binary  # psycopg @ 3
-    dj4.2: https://github.com/django/django/archive/stable/4.2.x.tar.gz#egg=django
-    dj5.0: https://github.com/django/django/archive/stable/5.0.x.tar.gz#egg=django
+	py{3.8,3.9,3.10,3.11,3.12,pypy}: sqlalchemy==1.4.*
+    psycopg2: psycopg2==2.*
+    psycopg2: psycopg2-binary==2.*
+    psycopg3: psycopg==3.*
+    psycopg3: psycopg-binary==3.*  # psycopg @ 3
+    dj4.2: Django>=4.2,<4.3
+    dj5.0: Django>=5.0.1,<5.1
     djmain: https://github.com/django/django/archive/main.tar.gz#egg=django
 
 commands =
     {envbindir}/python -Wd manage.py test -v2 {posargs:tests}
+
+
+[gh-actions]
+# Running tox in GHA without redefining it all in a GHA matrix:
+# https://github.com/ymyzk/tox-gh-actions
+python =
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311
+    3.12: py312
+django =
+    4.2: dj42
+    5.0: dj50
+    main: djmain
+psycopg =
+    psycopg2: psycopg3
+    psycopg3: psycopg2
