--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,15 +32,6 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
-        django-version:
-          - "4.2"
-          - "5.0"
-        exclude:
-          # Django 5 supports Python 3.10 upwwards only
-          - python-version: "3.8"
-            django-version: "5.0"
-          - python-version: "3.9"
-            django-version: "5.0"
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
@@ -52,4 +43,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
     - name: Test with tox
-      run: tox -e py${{ matrix.python-version }}-dj${{ matrix.django-version }}
+      run: tox
